; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_delete_list_objects.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_delete_list_objects.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_6__*, %struct.TYPE_6__*, i32 }

@delete_list_objects.ltx = internal global i32 0, align 4
@NIL = common dso_local global i64 0, align 8
@current_list_id = common dso_local global i32 0, align 4
@object_tree = common dso_local global i32 0, align 4
@tot_list_entries = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32)* @delete_list_objects to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @delete_list_objects(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %6 = call i64 @SMALL_NODE(%struct.TYPE_6__* %5)
  %7 = load i64, i64* @NIL, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %41

9:                                                ; preds = %2
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %11 = call i32 @NODE_TYPE(%struct.TYPE_6__* %10)
  switch i32 %11, label %30 [
    i32 128, label %12
    i32 129, label %27
  ]

12:                                               ; preds = %9
  %13 = load i32, i32* @current_list_id, align 4
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @combine_ltree_x(i32 %13, i32 %16, i32* @delete_list_objects.ltx)
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %12
  %21 = load i32, i32* @object_tree, align 4
  %22 = load i32, i32* @delete_list_objects.ltx, align 4
  %23 = call i32 @ltree_delete(i32 %21, i32 %22)
  store i32 %23, i32* @object_tree, align 4
  br label %24

24:                                               ; preds = %20, %12
  %25 = load i32, i32* @tot_list_entries, align 4
  %26 = add nsw i32 %25, -1
  store i32 %26, i32* @tot_list_entries, align 4
  br label %30

27:                                               ; preds = %9
  %28 = load i32, i32* @tot_list_entries, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* @tot_list_entries, align 4
  br label %30

30:                                               ; preds = %27, %9, %24
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 1
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %32, align 8
  %34 = load i32, i32* %4, align 4
  call void @delete_list_objects(%struct.TYPE_6__* %33, i32 %34)
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %36, align 8
  %38 = load i32, i32* %4, align 4
  call void @delete_list_objects(%struct.TYPE_6__* %37, i32 %38)
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %40 = call i32 @free_tree_ext_large_node(%struct.TYPE_6__* %39)
  br label %41

41:                                               ; preds = %30, %2
  ret void
}

declare dso_local i64 @SMALL_NODE(%struct.TYPE_6__*) #1

declare dso_local i32 @NODE_TYPE(%struct.TYPE_6__*) #1

declare dso_local i32 @combine_ltree_x(i32, i32, i32*) #1

declare dso_local i32 @ltree_delete(i32, i32) #1

declare dso_local i32 @free_tree_ext_large_node(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
